--- a/bio.html
+++ b/bio.html
@@ -11,9 +11,9 @@
     <header>
         <h1>Dan Friberg</h1>
         <nav>
-            <a href="/bio">Bio</a> | 
-            <a href="/listen">Listen</a> | 
-            <a href="/earlyinstruments">Early Instruments</a>
+            <a href="/bio.html">Bio</a> | 
+            <a href="/listen.html">Listen</a> | 
+            <a href="/earlyinstruments.html">Early Instruments</a>
         </nav>    
     </header>
     <section>
@@ -22,9 +22,9 @@
 
 <p>Dr. Friberg has been a concerto soloist with the Waterloo-Cedar Falls Symphony, Kenwood Symphony, Minnetonka Symphony, Minnetonka Civic Orchestra, Orchestra of the Royal Ghent Conservatory of Music, and Century College Chamber Orchestra. He was featured on the JOYA! chamber music series, the Cedar Valley Chamber Music Festival, and with the Hill House Chamber Players. As a member of the East Coast Woodwind Quintet, he toured the United States and Russia, and was a finalist at the Coleman Chamber Music Competition in Pasadena, California. He participated in the Hot Springs Music Festival, Bowdoin Summer Music Festival, Music Academy of the West, Madeline Island Music Camp, American-Russian Young Artists Orchestra, and Attergau International Orchestral Institute (Austria).</p>
 
-<p>From 2009 to 2010 he was a fellow of the Belgian American Education Foundation (B.A.E.F.), studying with Eddy Vanoosthuyse, Frank Coryn, and Vincenzo Casale at the Royal Ghent Conservatory of Music in Belgium. (Click HERE for Dan's blog documenting the family's year in Ghent.) During his time in Belgium, Dr. Friberg became interested in early clarinets (see below), an expertise he continues to develop. In 2014 he was the featured clarinet guest artist at the Simpson College Single Reed Symposium, and in the spring of 2015 was visiting instructor of clarinet at Winona State University. He taught at the University of Wisconsin-La Crosse during the 2018-2019 school year.</p>
+<p>From 2009 to 2010 he was a fellow of the <a href="https://baef.be/" rel="noopener" title="Visit BAEF" target="_blank">Belgian American Education Foundation (B.A.E.F.)</a>, studying with Eddy Vanoosthuyse, Frank Coryn, and Vincenzo Casale at the Royal Ghent Conservatory of Music in Belgium. (see <a target="_blank" href="http://dsfriberg.wordpress.com/">Dan's blog</a> documenting the family's year in Ghent.) During his time in Belgium, Dr. Friberg became interested in early clarinets (see below), an expertise he continues to develop. In 2014 he was the featured clarinet guest artist at the Simpson College Single Reed Symposium, and in the spring of 2015 was visiting instructor of clarinet at Winona State University. He taught at the University of Wisconsin-La Crosse during the 2018-2019 school year.</p>
 
-<p>A Minneapolis native, Daniel Friberg earned his Bachelor of Arts and Master of Music degrees at Yale University, studying with clarinet soloist David Shifrin, and his Doctor of Musical Arts degree at the University of Minnesota, studying with Burt Hara of the Minnesota Orchestra. He served as Second and E-flat Clarinet of the Waterloo-Cedar Falls Symphony from 2011-2018. He is co-manager of the combined printed music departments of Groth Music Co. and Eble Music Co. in Bloomington, MN.</p>
+<p>A Minneapolis native, Daniel Friberg earned his Bachelor of Arts and Master of Music degrees at Yale University, studying with clarinet soloist David Shifrin, and his Doctor of Musical Arts degree at the University of Minnesota, studying with Burt Hara of the Minnesota Orchestra. He served as Second and E-flat Clarinet of the Waterloo-Cedar Falls Symphony from 2011-2018. He is co-manager of the combined printed music departments of <a href="https://www.grothmusic.com" target="_blank" title="Visit grothmusic.com" rel="noopener">Groth Music Co.</a> and Eble Music Co. in Bloomington, MN.</p>
     </section>
 </body>
 </html>
