--- a/earlyinstruments.html
+++ b/earlyinstruments.html
@@ -11,6 +11,7 @@
     <header>
         <h1>Dan Friberg</h1>
         <nav>
+            <a href="/">Home</a> | 
             <a href="/bio.html">Bio</a> | 
             <a href="/listen.html">Listen</a> | 
             <a href="/earlyinstruments.html">Early Instruments</a>
