--- a/bio.html
+++ b/bio.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Dan Friberg</h1>
+        <h1 id="home"><a href="/">Dan Friberg</a></h1>
         <nav>
             <a href="/">Home</a> | 
             <a href="/bio.html">Bio</a> | 
