--- a/bio.html
+++ b/bio.html
@@ -17,7 +17,7 @@
             <a href="/design.html">Design</a>
         </nav>    
     </header>
-    <mainn>
+    <main>
         <h2>Biography</h2>
         <p>Clarinetist Daniel Friberg has performed across the United States and in South Korea, Russia, the Czech Republic, Belgium, Hungary, Austria, Italy and France. Past orchestral engagements include the Connecticut Virtuosi Chamber Orchestra, Orchestra Iowa, Duluth-Superior Symphony, Minnesota Orchestra, New World Symphony, Dubuque Symphony and Waterloo-Cedar Falls Symphony, including performances under conductors Michael Tilson-Thomas, James Conlon, Leon Botstein, Valery Gergiev, Bramwell Tovey, Bobby McFerrin, Andrew Litton, Gunther Schuller and Peter Oundjian.</p>
 
